@@ -11,6 +11,7 @@ Hint: (highlight-phrase "[0-9][.][0-9][.][0-9]+\\|[0-9]+[.][.][0-9]+"
 - next | NOT YET RELEASED
   - bugfixes
     - don't special-case property value type ‘none’
+    - handle subtrees on write
   - new keybinding for ‘gnugo-undo-one-move’: M-u
   - ‘gnugo-undo-one-move’ can optionally switch colors
   - performance improvements
